# my-pass

./: .env.example  Cargo.toml  Dockerfile  README.md  SPECIFICATIONS.md  compose.app.yaml  compose.integration.yaml  specifications.md
.github/: copilot-instructions.md
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  output.rs  password.rs
migrations/: 20251215074758_account.sql  20260119222547_item.sql
src/: config.rs  httpserver.rs  lib.rs  main.rs  newtypes.rs  secrets.rs
src/cli/: client.rs  config.rs  mod.rs  tokenstore.rs
src/crypto/: argon2instance.rs  jwt.rs  keypair.rs  mod.rs  password.rs
src/domains/: mod.rs
src/domains/accounts/: mod.rs  models.rs  notifier.rs  repository.rs  service.rs  testutil.rs
src/domains/items/: mod.rs  models.rs  notifier.rs  repository.rs  service.rs  testutil.rs
src/routes/: jwt.rs  mod.rs
src/routes/accounts/: domain.rs  mod.rs  repository.rs
src/routes/items/: mod.rs
tests/: healthcheck_test.rs  items_creation_test.rs  login_test.rs  me_test.rs  new_verification_ticket_test.rs  not_found_test.rs  signup_test.rs
tests/common/: cli.rs  mod.rs
