[package]
name = "my-pass"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100" }
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace", "request-id"] }
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22" }
