[package]
name = "my-pass"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = { version = "1.0.100" }
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
base64 = "0.22.1"
dotenvy = { version = "0.15.7" }
ed25519-dalek = "2.2.0"
fake = { version = "4.4.0", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace", "request-id"] }
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22" }
validator = "0.20.0"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
sqlx-cli = "0.8.6"
