[package]
name = "my-pass-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mypass"
path = "src/main.rs"

[dependencies]
my-pass = { path = ".." }
anyhow = "1.0.100"
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.25", features = ["json"] }
keyring = "3.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rpassword = "7.4.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
base64 = "0.22.1"
